// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > should render 1`] = `
<ul
  class="_root_1ah4z_1"
>
  <li
    class="_li_1ah4z_8"
  >
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
  </li>
</ul>
`;

exports[`List > should render with subsection left 1`] = `
<ul
  class="_root_1ah4z_1"
>
  <li
    class="_li_1ah4z_8"
  >
    <div>
      <div
        class="_root_1310k_1"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div>
      <div
        class="_root_1310k_1"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div>
      <div
        class="_root_1310k_1"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div>
      <div
        class="_root_1310k_1"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
  </li>
</ul>
`;

exports[`List > should render with subsection right 1`] = `
<ul
  class="_root_1ah4z_1"
>
  <li
    class="_li_1ah4z_8"
  >
    <div>
      <div
        class="_root_1310k_1"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_ybf73_1 _root_z0q9c_1"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_z0q9c_14"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_ybf73_1 _root_z0q9c_1"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_z0q9c_14"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_ybf73_1 _root_z0q9c_1"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_z0q9c_14"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_1ah4z_8"
  >
    <div
      class="_mainSection_1ah4z_14"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_ybf73_1 _root_z0q9c_1"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_z0q9c_14"
        >
          Test
        </span>
      </button>
    </div>
  </li>
</ul>
`;
